# Object-Oriented-Programming

./: README.md
Arcade/: .gitignore  Doxyfile
Arcade/doc/: IMPLEMENTATION_GUIDE.md
Arcade/src/Core/: Core.hpp
Arcade/src/Game/Menu/: Menu.hpp
Arcade/src/Game/Minesweeper/: Minesweeper.cpp
Arcade/src/Game/Snake/: Snake.cpp
Arcade/src/Include/: Event.hpp  IGame.hpp
Arcade/src/Renderer/Sdl2/: Sdl2.cpp  Sdl2.hpp
Arcade/src/Renderer/Sfml/: Sfml.cpp
RayTracer/: .gitignore  CMakeLists.txt
RayTracer/docs/: architecture.md  launch.md
RayTracer/src/Factory/: LightFactory.cpp  ShapeFactory.hpp
RayTracer/src/Lights/: AmbientLight.cpp  AmbientLight.hpp  DirectionalLight.cpp  DirectionalLight.hpp  PointLight.cpp  PointLight.hpp
RayTracer/src/Math/: Point3D.cpp  Point3D.hpp  Rotate3D.cpp  Rotate3D.hpp  Vector3D.cpp
RayTracer/src/Raytracer/: HitInfo.hpp  Ray.cpp  Ray.hpp  Rectangle3D.hpp  Scene.cpp  Scene.hpp
RayTracer/src/Raytracer/SceneBuilding/: ISceneBuilder.hpp  LibConfigSceneBuilder.cpp  LibConfigSceneBuilder.hpp  SceneDirector.hpp
RayTracer/src/Shapes/: AShape.hpp  BVHNode.cpp  Cone.cpp  Cone.hpp  Cylinder.cpp  Cylinder.hpp  GroupShape.cpp  LimitedCylinder.cpp  Plane.cpp  Plane.hpp  Triangle.hpp
RayTracer/src/Utils/: AABB.hpp  Color.hpp
RayTracer/src/Utils/Plugin/: IPlugin.hpp
RayTracer/src/Utils/Plugin/LightsPlugin/: LightsPlugin.cpp
[2nd year] Arcade/: CMakeLists.txt  CONTRIBUTORS.md  README.md
[2nd year] Arcade/src/: main.cpp
[2nd year] Arcade/src/Core/: Core.cpp
[2nd year] Arcade/src/Game/Menu/: Menu.cpp
[2nd year] Arcade/src/Game/Minesweeper/: Minesweeper.hpp
[2nd year] Arcade/src/Game/Snake/: Snake.hpp
[2nd year] Arcade/src/Include/: ArcError.hpp  DLloader.hpp  IRenderer.hpp  Utils.hpp
[2nd year] Arcade/src/Renderer/Ncurses/: Ncurses.cpp  Ncurses.hpp
[2nd year] Arcade/src/Renderer/Sfml/: Sfml.hpp
[2nd year] RayTracer/docs/: README.md  core-build.md  scene-config.md
[2nd year] RayTracer/src/: main.cpp
[2nd year] RayTracer/src/Factory/: LightFactory.hpp  ShapeFactory.cpp
[2nd year] RayTracer/src/Lights/: ILight.hpp
[2nd year] RayTracer/src/Math/: Vector3D.hpp
[2nd year] RayTracer/src/Raytracer/: Camera.cpp  Camera.hpp  Rectangle3D.cpp
[2nd year] RayTracer/src/Raytracer/SceneBuilding/: HardCodedSceneBuilder.cpp  HardCodedSceneBuilder.hpp
[2nd year] RayTracer/src/Shapes/: BVHNode.hpp  GroupShape.hpp  IShape.hpp  LimitedCone.cpp  LimitedCone.hpp  LimitedCylinder.hpp  ObjShape.cpp  ObjShape.hpp  Sphere.cpp  Sphere.hpp  Triangle.cpp
[2nd year] RayTracer/src/Utils/: AABB.cpp
[2nd year] RayTracer/src/Utils/DLloader/: DLloader.hpp
[2nd year] RayTracer/src/Utils/FileWatcher/: FileWatcher.cpp  FileWatcher.hpp
[2nd year] RayTracer/src/Utils/Plugin/LightsPlugin/: LightsPlugin.hpp
[2nd year] RayTracer/src/Utils/Plugin/ShapesPlugin/: ShapesPlugin.cpp  ShapesPlugin.hpp
